tdf#104082 RTF filter: handle user-defined document properties of type number

Previously only strings were handled, which resulted in not being able
to open the bugdoc.

(cherry picked from commit fc8c4606e0834cd2128a228c2c95fc7c8f9eb7b1)

Change-Id: I2452cbabf48bfaa9f1a3044be4b8cbe4aa9dd0d9
Reviewed-on: https://gerrit.libreoffice.org/33952
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>