writerfilter/source/rtftok/rtfdispatchvalue.cxx
@@ -1391,6 +1391,9 @@ RTFError RTFDocumentImpl::dispatchValue(RTFKeyword nKeyword, int nParam)
     {
         switch (nParam)
         {
+        case 3:
+            m_aStates.top().aPropType = cppu::UnoType<sal_Int32>::get();
+            break;
         case 30:
             m_aStates.top().aPropType = cppu::UnoType<OUString>::get();
             break;
